force-app/main/default/objects/Sale_Item__c/fields/Merchandise__c.field-meta.xml
<CustomField>
    <fullName>Merchandise__c</fullName>
    <description>Merchandise Name</description>
    <label>Merchandise</label>
    <referenceTo>Merchandise__c</referenceTo>
    <relationshipLabel>Sale Items</relationshipLabel>
    <relationshipName>Sale_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>