force-app/main/default/objects/Sale_Item__c/fields/SellItem_Desc__c.field-meta.xml
<CustomField>
    <fullName>SellItem_Desc__c</fullName>
    <description>SellItem Desc</description>
    <inlineHelpText>SellItem Desc</inlineHelpText>
    <label>SellItem Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>