force-app/main/default/objects/Sale_Item__c/fields/SellItem_Stock__c.field-meta.xml
<CustomField>
    <fullName>SellItem_Stock__c</fullName>
    <description>SellItem Stock</description>
    <inlineHelpText>SellItem Stock</inlineHelpText>
    <label>SellItem Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>