force-app/main/default/objects/Sale_Item__c/fields/SelttItem_Price__c.field-meta.xml
<CustomField>
    <fullName>SelttItem_Price__c</fullName>
    <description>SelttItem Price</description>
    <inlineHelpText>SelttItem Price</inlineHelpText>
    <label>SelttItem Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>